<resources>
    <string name="app_name">Test</string>
    <string name="profile_Info">Profile Info</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="user_name">Username</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="save_button">Save</string>
    <string name="clear_button">Clear</string>
    <string name="again_button">Again</string>
</resources>