<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <TextView
        android:hint="@string/profile_Info"
        android:textColorHint="@color/white"
        android:textSize="60sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/again_button"
        android:visibility="gone"

        />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFirstName"
            android:hint="@string/first_name"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="#30FFFFFF"
            android:textSize="25sp"
            android:minHeight="48dp"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_person_outline_24"
            android:drawablePadding="20dp"
            android:visibility="visible"
            />



        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLastName"
            android:hint="@string/last_name"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="#30FFFFFF"
            android:minHeight="48dp"
            android:textSize="25sp"
            android:padding="5dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_person_outline_24"
            android:drawablePadding="20dp"
            android:visibility="visible"

            />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        android:textSize="25sp"
        android:padding="5dp"
        android:background="#30FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="20dp"
        android:letterSpacing="0.1"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUsername"
        android:textColorHint="@color/white"
        android:hint="@string/user_name"
        android:background="#30FFFFFF"
        android:minHeight="48dp"
        android:textSize="25sp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:letterSpacing="0.1"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etAge"
            android:hint="@string/age"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="#30FFFFFF"
            android:minHeight="48dp"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
              />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCountry"
            android:hint="@string/country"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="#30FFFFFF"
            android:minHeight="48dp"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:hint="@string/save_button"
            android:textColorHint="@color/white"
            android:background="@color/save_button"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClear"
            android:hint="@string/clear_button"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@color/clear_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>




</LinearLayout>